unpackaged/config/ready/06_Payment2us/objects/AAkPay__Payment_Txn__c.object
<CustomObject>
    <fields>
        <fullName>redu_Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment</label>
        <referenceTo>rio_ed__Fee_Payment__c</referenceTo>
        <relationshipLabel>P2U Payment Txns</relationshipLabel>
        <relationshipName>Payment_Txns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redu_RIO_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RIO Order</label>
        <referenceTo>rio_ed__Order__c</referenceTo>
        <relationshipLabel>Payment Txns</relationshipLabel>
        <relationshipName>Payment_Txns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redu_Student_Fee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student Fee</label>
        <referenceTo>rio_ed__Student_Fee__c</referenceTo>
        <relationshipLabel>P2U Payment Txns</relationshipLabel>
        <relationshipName>Payment_Txns</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>